--- a/composer.json
+++ b/composer.json
@@ -12,8 +12,8 @@
     "require-dev": {},
     "authors": [
         {
-            "name": "Jérémie Flahaut",
-            "email": "jeremieflahaut@gmail.com"
+            "name": "",
+            "email": ""
         }
     ],
     "require": {
