namespace and provider

--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "download",
         "laravel"
       ],
+    "minimum-stability": "dev",
     "require-dev": {},
     "authors": [
         {
